public/index.css
html, body{
  padding: 0;
  margin: 0;
  font-family: 'Ubuntu', sans-serif;
  font-size: 16px;
  font-weight: 300;
  background-color: var(--bg-color);
  overflow-x: hidden;
  color: var(--text-color);
}

section.page{
  max-width: 1200px;
  padding: 0 2rem 1rem 2rem;
  margin: auto;
}

h1, h2, h3, h4, h5, h6{
  font-weight: 700;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  text-overflow: ellipsis;
}
h1{
  font-size: 2.5rem;
  padding: 2rem 0;
}
h2{
  font-size: 2rem;
  padding: 1.5rem 0;
}
h3{
  font-size: 1.5rem;
  padding: 1.25rem 0;
}
h4{
  font-size: 1.25rem;
  padding: 0.75rem 0;
}
h5{
  font-size: 1rem;
  padding: 0.75rem 0;
}
h6{
  font-size: 0.75rem;
  padding: 0.75rem 0;
}

.websiteName{
  font-family: 'Overlock SC', cursive;
  font-weight: 400;
}

input{
  font-family: 'Ubuntu', sans-serif;
  font-weight: 300;
}

a{
  color: var(--link-color);
  text-decoration: none;
}
a:hover{
  color: var(--link-hover-color);
  text-decoration: none;
}

@media screen and (max-width: 750px){

  section.page{
    padding: 0 0.5rem 1rem 0.5rem;
    margin: auto;
  }

}

/* Color Variables */
body {
  --bg-color: #fffaf0;
  --text-color: black;
  --link-color: #1e88e5;
  --link-hover-color: #0d47a1;
  --card-bg-color: #ffffff;
}

body[dark-mode='on'] {
  --bg-color: #04121E;
  --text-color: white;
  --link-color: #1e88e5;
  --link-hover-color: #0d47a1;
  --card-bg-color: #292C2F;
}

